--- a/HomeWorks/HomeWorks.csproj
+++ b/HomeWorks/HomeWorks.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lesson_2\Level_1-Task_5.cs" />
     <Compile Include="Lesson_2\Level_2-Task_6.cs" />
     <Compile Include="Lesson_2\RandomGeneratorDemo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
